Fixed layout issues on mobile

--- a/styles/layout/_header.scss
+++ b/styles/layout/_header.scss
@@ -11,21 +11,22 @@
 		color: variables.$color-logo;
 		font-size: 2rem;
 		font-weight: lighter;
-		overflow: hidden;
 
 		@include mixins.tablet() {
 			font-size: 3.5rem;
+			overflow: hidden;
 		}
 	}
 
 	.header_image {
 		height: 70px;
 		margin-top: -15px;
-		margin-bottom: -30px;
+		margin-bottom: -20px;
 		width: auto;
 
 		@include mixins.tablet() {
 			height: 100px;
+			margin-bottom: -30px;
 		}
 	}
 
